--- a/links.yaml
+++ b/links.yaml
@@ -1,10 +1,10 @@
-title: Anthony Nixon
-name: Anthony Nixon
+title: Anthony Niximacco
+name: Anthony Niximacco
 location: Minnesota, USA
 links:
   - title: Mastodon
     icon: fa-brands fa-mastodon
-    url: https://mn.social/@AnthonyNixon
+    url: https://mn.social/@Niximacco
     attributes:
       rel: me
   - title: Twitter
