--- a/links.yaml
+++ b/links.yaml
@@ -7,15 +7,15 @@ links:
     url: https://mn.social/@Niximacco
     attributes:
       rel: me
-  - title: Twitter
-    icon: fa-brands fa-twitter
-    url: https://twitter.com/AnthonyNixon
+  - title: Bluesky
+    icon: fa-brands fa-bluesky
+    url: https://anthony.niximacco.social
   - title: Github
     icon: fa fa-github
     url: https://github.com/AnthonyNixon
   - title: LinkedIn
     icon: fa fa-linkedin
-    url: https://www.linkedin.com/in/nixon-anthony/
+    url: https://www.linkedin.com/in/anthony-niximacco/
   - title: Email
     icon: fa fa-envelope
     url: mailto:mail@ajn.me
