--- a/links.yaml
+++ b/links.yaml
@@ -4,7 +4,7 @@ location: Minnesota, USA
 links:
   - title: Bluesky
     icon: fa-brands fa-bluesky
-    url: https://bsky.app/profile/anthony.niximac.co
+    url: https://bsky.app/profile/anthonyniximac.co
   - title: Github
     icon: fa fa-github
     url: https://github.com/AnthonyNixon
