--- a/links.yaml
+++ b/links.yaml
@@ -7,7 +7,7 @@ links:
     url: https://bsky.app/profile/anthonyniximac.co
   - title: Github
     icon: fa fa-github
-    url: https://github.com/AnthonyNixon
+    url: https://github.com/Niximacco
   - title: Matrix
     icon: fa-regular fa-message
     url: https://matrix.to/#/@anthony:matrix.niximacco.chat
