--- a/links.yaml
+++ b/links.yaml
@@ -4,7 +4,7 @@ location: Minnesota, USA
 links:
   - title: Bluesky
     icon: fa-brands fa-bluesky
-    url: https://bsky.app/profile/anthonyniximac.co
+    url: https://bsky.app/profile/anthony.niximac.co
   - title: Matrix
     icon: fa-regular fa-message
     url: https://matrix.to/#/@anthony:matrix.niximacco.chat
